PROJECT(NEO)

## Let's use a reasonable modern version
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_HAS_SORT 1)

## Set up binary output path
SET(BINARY_OUTPUT ${CMAKE_BINARY_DIR}/BinaryOutput)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BINARY_OUTPUT})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BINARY_OUTPUT})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_OUTPUT})

set(CMAKE_SHARED_LIBRARY_PREFIX "")

SET(NEO_INCLUDES ${CMAKE_SOURCE_DIR}/NeoEngine/SDK/NeoCore/Includes 
	${CMAKE_SOURCE_DIR}/NeoEngine/SDK/NeoEngine/Includes)

SET(MONO_LIBRARIES mono-2.0)
SET(MONO_INCLUDES /usr/include/mono-2.0)

ADD_SUBDIRECTORY(NeoPlugin)
ADD_SUBDIRECTORY(NeoSharp)

SET(NO_DOCUMENTATION true)
SET(NO_TOOLS true)
SET(STANDARD_LUA true)
ADD_SUBDIRECTORY(NeoEngine)
